--- a/package.json
+++ b/package.json
@@ -50,12 +50,13 @@
     "devDependencies": {
         "@types/node": "^20.10.0",
         "@vitejs/plugin-react-swc": "^3.10.2",
+        "gh-pages": "^6.3.0",
         "vite": "6.3.5"
     },
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "preview": "vite preview --outDir build",
-        "postbuild": "cp build/index.html build/404.html"
+        "preview": "vite preview --outDir docs",
+        "postbuild": "cp docs/index.html docs/404.html && touch docs/.nojekyll"
     }
 }
